--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@ config/gonggangam-5ae27-firebase-adminsdk-ydjub-7738c07e0b.json
 config/test-a9c79-firebase-adminsdk-t1wyq-b50493c592.json
 config/fcm.
 config/gonggangam-f2086-firebase-adminsdk-hw07b-3ef2e5c277.json
-
+config/gonggangam-f2086-firebase-adminsdk-hw07b-8c3a0c0873.json
