--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ config/fcm.
 config/gonggangam-f2086-firebase-adminsdk-hw07b-3ef2e5c277.json
 config/gonggangam-f2086-firebase-adminsdk-hw07b-8c3a0c0873.json
 gonggangam-f2086-firebase-adminsdk-hw07b-66d59423da.json
+gonggangam-f2086-firebase-adminsdk-hw07b-2da8c5720d.json
